--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,12 @@
-PORT = 5000
+# Database Configuration
+DATABASE_URL=your_neon_postgresql_connection_string_here
+
+# JWT Secret (change this to a random string in production)
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+
+# Hugging Face API Key (get from https://huggingface.co/settings/tokens)
+HUGGINGFACE_API_KEY=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
+
+# Server Configuration
+PORT=3000
+NODE_ENV=development
