Setting neon database

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 # Database Configuration
-DATABASE_URL=your_neon_postgresql_connection_string_here
+DATABASE_URL=postgresql://neondb_owner:npg_yld0RFmrSgE5@ep-late-king-ah11tn7c-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 
 # JWT Secret (change this to a random string in production)
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
