Adding frontend and api

--- a/backend/.env
+++ b/backend/.env
@@ -1,12 +1,13 @@
 # Database Configuration
-DATABASE_URL=your_neon_postgresql_connection_string_here
+DATABASE_URL=postgresql://postgres:aditya%40jain27@db.tymbxfdssjamyjyuodao.supabase.co:5432/postgres
 
 # JWT Secret (change this to a random string in production)
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
 # Hugging Face API Key (get from https://huggingface.co/settings/tokens)
-HUGGINGFACE_API_KEY=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
+HUGGINGFACE_API_KEY=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
 
 # Server Configuration
 PORT=3000
 NODE_ENV=development
+
